--- a/MyBookshelf.csproj
+++ b/MyBookshelf.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="BooksBackground.PNG" />
   </ItemGroup>
 
